profilelist1exp/unpackaged/objects/Volume_Based_Rule_Header__c.object
<CustomObject>
    <description>Viper Project</description>
    <fields>
        <fullName>COGS__c</fullName>
        <label>Volume Based %</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Sub_Region__c</controllingField>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>All Countries</fullName>
                </value>
                <value>
                    <fullName>ANDEAN</fullName>
                </value>
                <value>
                    <fullName>ANZ</fullName>
                </value>
                <value>
                    <fullName>Argentina</fullName>
                </value>
                <value>
                    <fullName>Australia</fullName>
                </value>
                <value>
                    <fullName>Brazil</fullName>
                </value>
                <value>
                    <fullName>Canada</fullName>
                </value>
                <value>
                    <fullName>Chile</fullName>
                </value>
                <value>
                    <fullName>China</fullName>
                </value>
                <value>
                    <fullName>Colombia</fullName>
                </value>
                <value>
                    <fullName>Czech</fullName>
                </value>
                <value>
                    <fullName>Denmark</fullName>
                </value>
                <value>
                    <fullName>Ecuador</fullName>
                </value>
                <value>
                    <fullName>Finland</fullName>
                </value>
                <value>
                    <fullName>France</fullName>
                </value>
                <value>
                    <fullName>Germany</fullName>
                </value>
                <value>
                    <fullName>Hong Kong</fullName>
                </value>
                <value>
                    <fullName>India</fullName>
                </value>
                <value>
                    <fullName>Ireland</fullName>
                </value>
                <value>
                    <fullName>Italy</fullName>
                </value>
                <value>
                    <fullName>Japan</fullName>
                </value>
                <value>
                    <fullName>Korea</fullName>
                </value>
                <value>
                    <fullName>Malaysia</fullName>
                </value>
                <value>
                    <fullName>Mexico</fullName>
                </value>
                <value>
                    <fullName>Morocco</fullName>
                </value>
                <value>
                    <fullName>Netherlands</fullName>
                </value>
                <value>
                    <fullName>New Zealand</fullName>
                </value>
                <value>
                    <fullName>NOLA</fullName>
                </value>
                <value>
                    <fullName>Norway</fullName>
                </value>
                <value>
                    <fullName>Panama</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Deduction_Reason__c</fullName>
        <label>Deduction Reason</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>FQ_Sort__c</fullName>
        <formula>VALUE(MID( TEXT(Fiscal_Quarter__c) ,3,2)&amp;RIGHT(TEXT(Fiscal_Quarter__c),1))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sort</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Fiscal_Quarter__c</fullName>
        <label>Fiscal Quarter</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>FY12Q1</fullName>
                </value>
                <value>
                    <fullName>FY12Q2</fullName>
                </value>
                <value>
                    <fullName>FY12Q3</fullName>
                </value>
                <value>
                    <fullName>FY12Q4</fullName>
                </value>
                <value>
                    <fullName>FY13Q1</fullName>
                </value>
                <value>
                    <fullName>FY13Q2</fullName>
                </value>
                <value>
                    <fullName>FY13Q3</fullName>
                </value>
                <value>
                    <fullName>FY13Q4</fullName>
                </value>
                <value>
                    <fullName>FY14Q1</fullName>
                </value>
                <value>
                    <fullName>FY14Q2</fullName>
                </value>
                <value>
                    <fullName>FY14Q3</fullName>
                </value>
                <value>
                    <fullName>FY14Q4</fullName>
                </value>
                <value>
                    <fullName>FY15Q1</fullName>
                </value>
                <value>
                    <fullName>FY15Q2</fullName>
                </value>
                <value>
                    <fullName>FY15Q3</fullName>
                </value>
                <value>
                    <fullName>FY15Q4</fullName>
                </value>
                <value>
                    <fullName>FY16Q1</fullName>
                </value>
                <value>
                    <fullName>FY16Q2</fullName>
                </value>
                <value>
                    <fullName>FY16Q3</fullName>
                </value>
                <value>
                    <fullName>FY16Q4</fullName>
                </value>
                <value>
                    <fullName>FY17Q1</fullName>
                </value>
                <value>
                    <fullName>FY17Q2</fullName>
                </value>
                <value>
                    <fullName>FY17Q3</fullName>
                </value>
                <value>
                    <fullName>FY17Q4</fullName>
                </value>
                <value>
                    <fullName>FY18Q1</fullName>
                </value>
                <value>
                    <fullName>FY18Q2</fullName>
                </value>
                <value>
                    <fullName>FY18Q3</fullName>
                </value>
                <value>
                    <fullName>FY18Q4</fullName>
                </value>
                <value>
                    <fullName>FY19Q1</fullName>
                </value>
                <value>
                    <fullName>FY19Q2</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Flat_Rate_Deduction__c</fullName>
        <label>Flat Rate Deduction</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <label>Region</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Americas</fullName>
                    <default>true</default>
                    <label>Americas</label>
                </value>
                <value>
                    <fullName>APJ</fullName>
                </value>
                <value>
                    <fullName>EMEA</fullName>
                </value>
                <value>
                    <fullName>Global</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Pending</fullName>
                    <default>true</default>
                    <label>Pending</label>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sub_Region__c</fullName>
        <label>Sub Region</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Region__c</controllingField>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>APJ</fullName>
                </value>
                <value>
                    <fullName>EMEA</fullName>
                </value>
                <value>
                    <fullName>Emerging</fullName>
                </value>
                <value>
                    <fullName>Latin America</fullName>
                </value>
                <value>
                    <fullName>North America</fullName>
                    <default>true</default>
                    <label>North America</label>
                </value>
                <value>
                    <fullName>UK-I</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Unique_Field_Update__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>To Check Uniqueness of the Volume Based Rule</description>
        <label>Unique Field Update</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Vendor__c</fullName>
        <label>Sub-Vendor</label>
        <referenceTo>Vendor__c</referenceTo>
        <relationshipLabel>Volume Based Rule Headers</relationshipLabel>
        <relationshipName>COGS_Rule_Headers</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>font_color_fff_Message__c</fullName>
        <defaultValue>&quot;Not to exceed MDF Rate&quot;</defaultValue>
        <label>&lt;font color=&quot;#fff&quot;&gt;Message</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <label>Volume Based Rule Header</label>
    <nameField>
        <label>Volume Based Rule Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Volume Based Rule Headers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>